Fix quick quote modal to show on mobile screens

--- a/src/features/quote/components/QuickQuote/styles.module.css
+++ b/src/features/quote/components/QuickQuote/styles.module.css
@@ -14,12 +14,6 @@
   box-sizing: border-box;
 }
 
-@media screen and (max-width: 599px) {
-  .overlay {
-    display: none !important;
-  }
-}
-
 .quickQuoteform {
   position: relative;
   margin: 0;
